fixing spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -3,14 +3,6 @@ font-family: 'Karla', sans-serif;
 font-family: 'Roboto', sans-serif;
 */
 
-/*html { 
-  background: url('images/background_color.jpeg') no-repeat top center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}*/
-
 body {
   background: url('images/background_color.jpeg') no-repeat 25% 0% fixed; 
   -webkit-background-size: cover;
@@ -38,7 +30,7 @@ body {
 
 .column a {
   font-size: 3.5em;
-  padding: 10px 50px;
+  padding: 5px 50px;
   color: #FFFFFF;
   text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   }
